@@ -1,5 +1,8 @@
 2005-09-21  Francois Marier  <francois@serioushack.com>
 
+	* src/ShrikeGl.hpp: Fix the OpenGL includes to be easier to
+	understand and to match the ones in Sh.
+
 	* src/shaders/NoiseShader.cpp: Rename cubicstep() to smoothstep().
 
 	* src/shaders/Checkerboard.cpp, JeweledShader.cpp: Rename
